# osuSwissBot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflow/: pylama.yaml
.github/workflows/: pylama.yml
botFeatures/buttons/: __init__.py  thumbnail.py
botFeatures/commands/: __init__.py  automation.py
config/: config.sample.json  firebase.sample.json  firebaseRuleset.json
data/: lastScores.json
database/: db.py
database/sqlCode/: initialDump.sql
docker/: entrypoint.sh
entities/: __init__.py
images/: __init__.py  thumbnailGenerator.py
images/output/: description
osu/: osuHandler.py
osuFeatures/: osuHandler.py
osuSwissBot/: dataManager.py
osuSwissBot/botFeatures/buttons/: thumbnail.py
osuSwissBot/data/: lastScores.json
osuSwissBot/entities/: entity.py
osuSwissBot/images/output/: replay.osr  title
osuSwissBot/osu/: __init__.py
prepareReplay/: __init__.py  prepareReplayManager.py
server/: README.md
src/: __init__.py  dataManager.py  index.py  tempfiles.py
src/botFeatures/: FunCommands.py  __init__.py  automation.py  emojis.py  funCommands.py
src/botFeatures/buttons/: __init__.py  thumbnail.py
src/botFeatures/commands/: automation.py  funCommands.py  miscCommands.py  replayCommands.py  suggestionCommands.py
src/botFeatures/emojis/: emojis.py
src/database/: __init__.py  db.py  firebase.py  guildCalls.py  objectManager.py  playerCalls.py
src/database/entities/: __init__.py  discordUser.py  guild.py  osuUser.py  skin.py
src/database/migrations/: 23-12-17 16.26 - ibuergis - add guild and discordUser.sql  (+4 more)
src/entities/: entity.py  player.py
src/helper/: __init__.py  guildHelper.py  osuHelper.py  osuUserHelper.py  permissionHelper.py  playerHelper.py  validator.py
src/osuFeatures/: __init__.py  calculations.py  osuHandler.py  ppCalculator.py  scoreCalculator.py
src/prepareReplay/: __init__.py  prepareReplayManager.py
(+9 files in other folders)
