[project]
name = "osuswissbot"
version = "0.1.0"
description = "a discord bot that prepares a thumbnail with description and title from an osu score"
authors = [
  {name = "Ian Bürgis", email = "ian@buergis.com" }
]
readme = "README.md"

dependencies = [
    "pillow ~= 10.1",
    "ossapi == v5.2.1",
    "sqlalchemy ~= 2.0",
    "py-cord ~= 2.6.1",
    "pymysql ~= 1.1",
    "osrparse ~= 6.0",
    "firebase-admin ~= 6.8.0"
]